Remove unused image and enhance UI components with updated styles and background images. Deleted 'ia-forrest.png', added new utility styles in 'globals.css', and improved layout and animations in 'PortfolioHero', 'ServiceCTA', and 'ServiceHero' components. Updated footer navigation structure for better accessibility and organization.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,3 +127,18 @@ body {
     transform: scale(1.1);
   }
 }
+
+@layer utilities {
+  .details-none {
+    & > summary {
+      list-style: none;
+      &::marker,
+      &::-webkit-details-marker {
+        display: none;
+      }
+    }
+    &[open] > summary {
+      margin-bottom: 1.5rem;
+    }
+  }
+}
