--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,7 +151,6 @@ body {
     transform: scale(1);
     animation-delay: 1s;
   }
-  
 }
 
 @keyframes slideIn {
@@ -211,7 +210,8 @@ body {
 }
 
 .slide-in-right {
-  animation: slideInFromRight 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
+  animation: slideInFromRight 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55)
+    forwards;
   animation-delay: 0.4s;
 }
 
@@ -239,7 +239,8 @@ body {
 }
 
 .animate .slide-in-right {
-  animation: slideInFromRight 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
+  animation: slideInFromRight 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55)
+    forwards;
 }
 
 @keyframes fadeInUp {
@@ -362,11 +363,17 @@ body {
     background-attachment: scroll;
     animation: parallaxMobile 20s linear infinite;
   }
-  
+
   @keyframes parallaxMobile {
-    0% { transform: translateY(-10%); }
-    50% { transform: translateY(10%); }
-    100% { transform: translateY(-10%); }
+    0% {
+      transform: translateY(-10%);
+    }
+    50% {
+      transform: translateY(10%);
+    }
+    100% {
+      transform: translateY(-10%);
+    }
   }
 }
 
